# tauridock

./: .gitignore  .gitlab-ci.yml  .tauridock.yml  Dockerfile  Dockerfile.minimal  Makefile  README.md  docker-compose.yml  docker-tauri-wrapper.sh  example-tauri-app.yml  index.html  pyproject.toml  requirements.txt  setup.py  tauri_builder.py  tauri_builder.yml  tauridock.py  tb.sh  test_tauri_builder.py
.github/: tauri-build.yml
api/: tauri_builder_api.py
app/: index.css  index.html  index.js
benchmarks/: benchmark_builds.py
docs/: API.md  CONFIG.md  DEV.md  DOCKER-TO-TAURI.md  INDEX.md  INSTALL.md  USAGE.md
k8s/: deployment.yaml
scripts/: scan.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
