[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tauridock"
version = "0.1.0"
description = "A tool for building Tauri applications in Docker containers"
authors = [{name = "DigitalTwin Run Team"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
tauridock = "tauri_builder:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tauri_builder"]

[tool.setuptools.package-data]
"*" = ["*.yml"]
